Widgets: Initial commit of ImageFileProperties. Still incomplete, but the most simple bit of informations are working.